--- a/Makefile.in
+++ b/Makefile.in
@@ -316,7 +316,7 @@ xml2_LDADD = $(XML_LIBS)
 2xml_LDADD = $(XML_LIBS)
 csv2_SOURCES = csv2.c
 2csv_SOURCES = 2csv.c
-DISTCLEANFILES = *~ build-aux/*~
+DISTCLEANFILES = *~ build-aux/*~ autoscan.log
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
