--- a/Portfile
+++ b/Portfile
@@ -1,3 +1,5 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
+
 PortSystem          1.0
 
 name                xml2
@@ -18,15 +20,16 @@ long_description    These tools are used to convert XML and HTML to and from a \
 homepage            http://dan.egnor.name/xml2/
 master_sites        http://download.ofb.net/gale/
 
-checksums           rmd160  bb4e7d93703f4724b0ea812a21bfa96e082eab51 \
+checksums           size    86318 \
+                    rmd160  bb4e7d93703f4724b0ea812a21bfa96e082eab51 \
                     sha256  e3203a5d3e5d4c634374e229acdbbe03fea41e8ccdef6a594a3ea50a50d29705
 
-depends_build   port:pkgconfig
+depends_build       port:pkgconfig
 
 depends_lib         port:libxml2
 
 post-destroot {
-    # Fix symlinks so they don't point into the destroot.
+    # Fix symlinks to keep them from pointing into the destroot:
     ln -sf ./xml2 ${destroot}${prefix}/bin/html2
     ln -sf ./2xml ${destroot}${prefix}/bin/2html
 }
