autoreconf with automake 1.17

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,12 @@
+aclocal.m4 linguist-generated
 build-aux/compile linguist-vendored
 build-aux/config.guess linguist-vendored
 build-aux/config.sub linguist-vendored
 build-aux/depcomp linguist-vendored
 build-aux/install-sh linguist-vendored
 build-aux/missing linguist-vendored
+configure linguist-generated
+configure.scan linguist-generated
 m4/pkg.m4 linguist-vendored
 web/*.html linguist-documentation
 Makefile.in linguist-generated
